sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/VCC_Training_Mode_DataTemplate__mdt.object-meta.xml
<CustomObject>
    <description>Houses data for training mode accounts.</description>
    <label>VCC Training Mode Data Template</label>
    <pluralLabel>VCC Training Mode Data Templates</pluralLabel>
</CustomObject>