sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Account_Data__c.field-meta.xml
<CustomField>
    <fullName>Account_Data__c</fullName>
    <description>JSON formatted data for account object.</description>
    <label>Account Data</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>