sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Allergies_Data__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Data__c</fullName>
    <label>Allergies Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>