sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Appointments_Data__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Data__c</fullName>
    <label>Appointments Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>