sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/DischargeSummaries_Data__c.field-meta.xml
<CustomField>
    <fullName>DischargeSummaries_Data__c</fullName>
    <label>Discharge Summary Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>