sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Labs_Data__c.field-meta.xml
<CustomField>
    <fullName>Labs_Data__c</fullName>
    <label>Labs Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>