sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Medications_Data__c.field-meta.xml
<CustomField>
    <fullName>Medications_Data__c</fullName>
    <description>JSON formated medications data.</description>
    <label>Medications Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>