sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/PACT_Data__c.field-meta.xml
<CustomField>
    <fullName>PACT_Data__c</fullName>
    <label>PACT Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>