sfdx-source/main/default/objects/VCC_Training_Mode_DataTemplate__mdt/fields/Visits_Data__c.field-meta.xml
<CustomField>
    <fullName>Visits_Data__c</fullName>
    <label>Visits Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>